--- a/app/src/main/res/layout/freshman_activity_campus_data_datail.xml
+++ b/app/src/main/res/layout/freshman_activity_campus_data_datail.xml
@@ -7,40 +7,8 @@
     android:background="@drawable/freshman_bg_tb"
     tools:context=".ui.activity.campus.CampusDataDetailActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/tb_data_detail"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@drawable/freshman_bg_tb"
-        app:contentInsetStart="0dp">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/iv_data_detail_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="15dp"
-                android:layout_marginStart="15dp"
-                android:src="@drawable/freshman_icon_back"
-                tools:ignore="ContentDescription" />
-
-            <TextView
-                android:id="@+id/tv_data_detail_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_centerVertical="true"
-                android:text="@string/freshman_strategy_reveal"
-                android:textColor="@color/freshman_title_white"
-                android:textSize="18sp" />
-
-        </RelativeLayout>
-
-    </android.support.v7.widget.Toolbar>
+    <include layout="@layout/freshman_include_toolbar"
+        android:id="@+id/toolbar"/>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tl_data"
@@ -52,7 +20,7 @@
         android:background="@color/freshman_bg_white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tb_data_detail"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:tabTextColor="@color/freshmen_finish_black"
         app:tabSelectedTextColor="#54ACFF">
 
