--- a/app/src/main/res/layout/freshman_activity_chat_online.xml
+++ b/app/src/main/res/layout/freshman_activity_chat_online.xml
@@ -1,67 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/freshman_bg_tb"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/freshman_bg_white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/tb_chatOnline"
+
+    <include layout="@layout/freshman_include_toolbar"
+        android:id="@+id/toolbar"/>
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/freshman_chatOnline_tl"
+        app:tabSelectedTextColor="#8BA2EB"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@drawable/freshman_bg_tb"
-        app:contentInsetStart="0dp"
-        >
+        android:layout_height="wrap_content"
+        android:layout_below="@id/toolbar"/>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
-
-            <ImageView
-                android:id="@+id/freshman_chatOnline_iv_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="15dp"
-                android:src="@drawable/freshman_icon_back"
-                android:layout_marginStart="15dp"
-                tools:ignore="ContentDescription" />
-
-            <TextView
-                android:id="@+id/freshman_chatOnline_tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/freshman_chat_online"
-                android:textColor="@color/freshman_title_white"
-                android:textSize="18sp"
-                android:layout_centerInParent="true"
-                android:layout_centerVertical="true"
-                />
-        </RelativeLayout>
-    </android.support.v7.widget.Toolbar>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:background="@color/freshman_bg_white"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/freshman_chatOnline_vp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <android.support.design.widget.TabLayout
-            android:id="@+id/freshman_chatOnline_tl"
-            app:tabSelectedTextColor="#8BA2EB"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        </android.support.design.widget.TabLayout>
+        android:layout_height="match_parent"
+        android:layout_below="@id/freshman_chatOnline_tl"/>
 
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/freshman_chatOnline_vp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </android.support.v4.view.ViewPager>
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
