--- a/app/src/main/res/layout/freshman_activity_military_training.xml
+++ b/app/src/main/res/layout/freshman_activity_military_training.xml
@@ -1,77 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:clipChildren="false"
-    android:background="@drawable/freshman_bg_tb"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:background="#F6F6F6"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/tb_military"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@drawable/freshman_bg_tb"
-        app:contentInsetStart="0dp"
-        >
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+    <include layout="@layout/freshman_include_toolbar"
+        android:id="@+id/toolbar"/>
 
-            <ImageView
-                android:id="@+id/freshman_military_iv_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="15dp"
-                android:src="@drawable/freshman_icon_back"
-                android:layout_marginStart="15dp"
-                tools:ignore="ContentDescription" />
-
-            <TextView
-                android:id="@+id/freshman_military_tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/freshman_military_show"
-                android:textColor="@color/freshman_title_white"
-                android:textSize="18sp"
-                android:layout_centerInParent="true"
-                android:layout_centerVertical="true"
-                />
-        </RelativeLayout>
-    </android.support.v7.widget.Toolbar>
-
-   <LinearLayout
-       android:orientation="vertical"
-       android:background="#F6F6F6"
+   <com.mredrock.cyxbs.freshman.ui.widget.JCardView
+       android:id="@+id/card"
+       app:hideRightShadow="true"
+       app:hideLeftShadow="true"
+       app:hideTopShadow="true"
+       app:hideBottomShadow="true"
+       android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
-       android:layout_height="match_parent">
-       <com.mredrock.cyxbs.freshman.ui.widget.JCardView
-           app:hideRightShadow="true"
-           app:hideLeftShadow="true"
-           app:hideTopShadow="true"
-           app:hideBottomShadow="true"
+       android:layout_height="wrap_content">
+       <android.support.design.widget.TabLayout
+           android:id="@+id/freshman_military_tl"
+           app:tabSelectedTextColor="#54ACFF"
+           app:tabTextColor="#999999"
            android:layout_width="match_parent"
-           android:layout_height="wrap_content">
-           <android.support.design.widget.TabLayout
-               android:id="@+id/freshman_military_tl"
-               app:tabSelectedTextColor="#54ACFF"
-               app:tabTextColor="#999999"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content">
+           android:layout_height="wrap_content"/>
+   </com.mredrock.cyxbs.freshman.ui.widget.JCardView>
 
-           </android.support.design.widget.TabLayout>
-       </com.mredrock.cyxbs.freshman.ui.widget.JCardView>
+   <android.support.v4.view.ViewPager
+       android:id="@+id/freshman_military_vp"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:layout_below="@+id/card"/>
 
-
-       <android.support.v4.view.ViewPager
-           android:id="@+id/freshman_military_vp"
-           android:layout_width="match_parent"
-           android:layout_height="match_parent">
-
-       </android.support.v4.view.ViewPager>
-   </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
