--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,4 +29,5 @@
     <dimen name="sp_18">18sp</dimen>
     <dimen name="sp_24">24sp</dimen>
     <dimen name="sp_32">32sp</dimen>
+    <dimen name="sp_10">10sp</dimen>
 </resources>
