--- a/app/src/main/res/layout/freshman_fragment_cqupt_mien_stu_detail.xml
+++ b/app/src/main/res/layout/freshman_fragment_cqupt_mien_stu_detail.xml
@@ -27,15 +27,13 @@
                 <com.makeramen.roundedimageview.RoundedImageView
                     android:layout_marginTop="14dp"
                     app:riv_corner_radius="6dp"
-                    android:scaleType="fitXY"
                     android:layout_gravity="center"
                     android:id="@+id/freshman_CyMien_detail_img"
-                    android:layout_width="wrap_content"
-                    android:layout_height="200dp" />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/freshman_CyMien_detail_name"
-                    android:text="这是名字"
                     android:textSize="16sp"
                     android:textColor="#000000"
                     android:layout_marginLeft="5dp"
@@ -47,7 +45,6 @@
 
                 <TextView
                     android:id="@+id/freshman_CyMien_detail_desc"
-                    android:text="这是内容"
                     android:layout_marginTop="4dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
