--- a/app/src/main/res/layout/freshman_fragment_cqupt_mien_stu.xml
+++ b/app/src/main/res/layout/freshman_fragment_cqupt_mien_stu.xml
@@ -21,12 +21,12 @@
 
                 </android.support.design.widget.TabLayout>
 
-        <android.support.v4.view.ViewPager
-            android:background="#F3F3F3"
-            android:id="@+id/freshman_CyMien_stu_vp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            <android.support.v4.view.ViewPager
+                android:background="#F3F3F3"
+                android:id="@+id/freshman_CyMien_stu_vp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-        </android.support.v4.view.ViewPager>
+            </android.support.v4.view.ViewPager>
 
 </LinearLayout>
