--- a/app/src/main/res/layout/freshman_fragment_cqupt_mien_stu_detail.xml
+++ b/app/src/main/res/layout/freshman_fragment_cqupt_mien_stu_detail.xml
@@ -1,76 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.gigamole.library.ShadowLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    >
+    android:layout_height="match_parent"
+    app:sl_shadow_angle="60"
+    app:sl_shadow_color="#E0E0E0"
+    app:sl_shadow_distance="4dp"
+    app:sl_shadow_radius="10dp"
+    app:sl_shadowed="true">
 
-
-
-    <com.mredrock.cyxbs.freshman.ui.widget.JCardView
+    <com.mredrock.cyxbs.freshman.ui.widget.JCardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/freshman_CyMien_detail_jv"
-        android:layout_marginTop="5dp"
-        app:shadowColor="#DADADA"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ScrollView
-            android:scrollbars="none"
-            android:id="@+id/freshman_CyMien_detail_sv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:orientation="vertical"
+        app:hideBottomShadow="true"
+        app:hideLeftShadow="true"
+        app:hideRightShadow="true"
+        app:hideTopShadow="true"
+        app:shadowRadius="0dp">
 
 
-            <LinearLayout
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:orientation="vertical"
+            <ScrollView
+                android:scrollbars="none"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <com.makeramen.roundedimageview.RoundedImageView
+
+                <LinearLayout
+                    android:layout_marginLeft="14dp"
+                    android:layout_marginRight="14dp"
                     android:layout_marginTop="14dp"
-                    app:riv_corner_radius="6dp"
-                    android:layout_gravity="center"
-                    android:id="@+id/freshman_CyMien_detail_img"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <com.makeramen.roundedimageview.RoundedImageView
+                        android:id="@+id/freshman_CyMien_detail_img"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+
+                        app:riv_corner_radius="6dp" />
 
 
+                    <TextView
+                        android:id="@+id/freshman_CyMien_detail_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginTop="5dp"
+                        android:textColor="#000000"
+                        android:textSize="16sp" />
 
-                <TextView
-                    android:id="@+id/freshman_CyMien_detail_name"
-                    android:textSize="16sp"
-                    android:textColor="#000000"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
 
+                    <TextView
+                        android:id="@+id/freshman_CyMien_detail_desc"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginTop="4dp"
+                        android:textSize="14sp" />
 
-                <TextView
-                    android:id="@+id/freshman_CyMien_detail_desc"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:textSize="14sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <ImageView
-                    android:id="@+id/freshman_CyMien_detail_seeMore"
-                    android:background="@drawable/freshman_icon_report_more"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_width="30dp"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
-        </ScrollView>
-
+                    <ImageView
+                        android:id="@+id/freshman_CyMien_detail_seeMore"
+                        android:layout_width="30dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/freshman_icon_report_more" />
+                </LinearLayout>
+            </ScrollView>
     </com.mredrock.cyxbs.freshman.ui.widget.JCardView>
-
-
-</FrameLayout>
+</com.gigamole.library.ShadowLayout>
