--- a/app/src/main/res/layout/freshman_fragment_military_tips.xml
+++ b/app/src/main/res/layout/freshman_fragment_military_tips.xml
@@ -1,30 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:scrollbars="none"
-    >
+
 
 <com.gigamole.library.ShadowLayout
-
-    app:sl_shadow_radius="5dp"
-    app:sl_shadow_color="#EFEFEF"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:sl_shadow_angle="90"
+    app:sl_shadow_radius="@dimen/dp_12"
+    app:sl_shadow_color="#E9E9E9"
+    app:sl_shadow_distance="4dp"
+    app:sl_shadowed="true"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="wrap_content">
+    <ScrollView
+        android:background="@drawable/freshman_shape_bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:scrollbars="none"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="6dp"
-            android:layout_marginRight="6dp"
-            android:layout_marginTop="5dp"
             android:padding="20dp"
-            android:background="@drawable/freshman_shape_bg"
+
             android:orientation="vertical">
 
             <android.support.v7.widget.AppCompatTextView
@@ -71,6 +70,5 @@
                 android:layout_width="match_parent"
                 android:layout_height="5dp" />
         </LinearLayout>
-
+    </ScrollView>
 </com.gigamole.library.ShadowLayout>
-</ScrollView>
