--- a/app/src/main/res/layout/freshman_item_strategy.xml
+++ b/app/src/main/res/layout/freshman_item_strategy.xml
@@ -51,6 +51,21 @@
             tools:text="新疆大盘鸡" />
 
         <TextView
+            android:id="@+id/tv_tag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center|top"
+            android:textColor="#fff"
+            android:background="@drawable/freshman_tag_cate"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:paddingTop="5dp"
+            android:layout_marginRight="@dimen/dp_12"
+            android:layout_marginEnd="@dimen/dp_12"
+            android:visibility="gone"
+            tools:text="1"/>
+
+        <TextView
             android:id="@+id/tv_describe_money_per"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
