--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,9 @@
         <item name="android:windowBackground">@null</item>
     </style>
 
+    <style name="freshman_anim_popup">
+        <item name="android:windowEnterAnimation">@anim/freshman_anim_popup_in</item>
+        <item name="android:windowExitAnimation">@anim/freshman_anim_popup_out</item>
+    </style>
+
 </resources>
